= svMisc News

== Changes in svMisc 0.9-61

* Better handling of non syntactically correct names in objList().


== Changes in svMisc 0.9-60

* A couple of functions are renamed: Parse() -> parseText(), clipsource() ->
  sourceClipboard(). These functions are declared deprecated, and will become
  defunct in final version 1.0-0 of the package.
  
* captureAll() now returns NA in case of incomplete line of code parsed by
  parseText(). It also detects if expr is a valid language expression or is
  NA.
  
* isMac() was not working correctly on Mac OS X Leopard and Snow Leopard
  (bug corrected).
  
* Sys.userdir() did not expanded tilde in recent R versions (corrected).

* Little change in def() arguments: length.out instead of length to use the same
  name as correcponding argument in rep(). Coercion to logical is now done using
  as.logical()... but the result may differ from previous implementations.
  
* For listTypes(), the convention has changed. Method/type is now separated by
  an underscore instead as with two dots (like in view_text.default).
  
* Sys.tempdir() and Sys.userdir() are deprecated in favor of the new more
  general functions systemFile() and systemDir().
  
* r() is deprecated in favor of pkg() (r is not informative enough and more
  susceptible to be used elsewere too).
  
* Args() is deprecated in favor of argsTip() and CallTip() is deprecated in
  favor of callTip() (further homogeneization of svMisc function names). The
  new argsTip() and callTip() functions can reflow the tip to a given width, and
  callTip() can also return a short description of the function as well as the
  list of available methods if the tip os asked for a generic function.
  
* Complete() and CompletePlus() are deprecated in favor of a unique completion()
  function. Code of both original functions has been fused and reworked.


== Changes in svMisc 0.9-59

* RJSON objects now use a customized list() function to build lists, but also
  structures and new S4 objects.